--- a/workspace/worklog/12-28.md
+++ b/workspace/worklog/12-28.md
@@ -14,3 +14,20 @@ pendulum swingup, 1000 steps.
 MUJOCO_GL=osmesa for render
 
 需要有自己的一套方法来visualize body and joint to make sure my understanding is correct.
+
+
+## 开始训练了
+first, 得先visualize trajectory instead of visualize img
+second, 感觉distance函数有问题，完全不收敛。
+
+得加入normalizer才行。
+
+这个normalizer贼诡异。。
+不知道为何而存在。。怎么可以对rotation matrix进行normalize呢?
+
+记得登陆fgo
+
+## 明日todo
+还得完成和baseline的比较。
+对于固定的环境得存下data才行。
+t-step-rollout 测试 and visualize。
