video and tester

--- a/workspace/worklog/12-28.md
+++ b/workspace/worklog/12-28.md
@@ -30,4 +30,28 @@ second, 感觉distance函数有问题，完全不收敛。
 ## 明日todo
 还得完成和baseline的比较。
 对于固定的环境得存下data才行。
-t-step-rollout 测试 and visualize。
+``t-step-rollout 测试 and visualize。
+
+Figure out dm control的cost函数。
+
+
+## 总结
+现在是1-1 21:17，从上次制定计划到现在已经过去快五天了。不能称之为失败也不能太称之为成功。五天内感觉至少有两天是划水的（虽然说陪妹子和放假也不能算是划水吧，但主要时间还是沉迷于划水之中了。）
+
+这几天我一直在试图复现GNN用于physical engine的一些work，所以中途不能避免地干了些很脏很累的活，包括研究mujoco的api，思考怎么使用mujoco进行画图，已经写了一个object-centric的一个trainer。想想这些也顶多是三天的工作量啊，说明之前的时光确实颓废掉了许多。但好说歹说，model learning part似乎有了些雏形了。框架已经在这里，我只需要做些简单的修修补补工作，包括但不限于：
+- visualization和test模块。
+- 对于数据存储的集中管理。
+- 对接control和model part。
+- 加noise。
+
+可以说，model learning稍稍走上了点正规。可惜复现GNN for physical model的工作却几乎很难实现了：1. 原paper里GNN就没比MLP真正强很多（当然GNN主要目的是对接perception做generalization了）。2. 原paper隐藏了大量细节，以至于基本很难复现。看paper甚至看不出来它用了什么模型做测试，测试代码究竟是如何实现的，以及它最终的分数究竟是多少。
+
+这段时间除了代码上，最大的收获就是发现我们当前的research很像是在高维空间里做坐标下降，我一会研究下model，一会研究下control，另外我又需要研究环境怎么设计。这些问题没有一个有准确的答案。这导致现在的研究和computer vision，纯RL都不同，算法是我，测试也是我。于是很多时候我都在迷茫，一是不知道要优化哪个部分，二是研究了一个部分之后不知道到底是否正确，因为其它部分都不一定是正确的形式。经过长久的思考，我发现唯一的办法就是和优化一样，将问题剖分成不同的部分，每次固定住其它部分，然后逐个迭代优化。这是我能想到的唯一法子了。故而接下来三天我大概会研究下model based control，也就是PET-CEM这篇文章。至于system identification等麻烦的东西，都可以留到之后了。
+
+我还得慢慢改正写代码的一些臭习惯：不要突然间就因为想到了一个复杂的component就想着去完整地实现，写代码应该自顶向下，先大体明确每个部分是要干嘛，怎么测试，再去实现。第二个就是当当前的想法卡住（或不想写）的时候，应该去看看paper或者写写一些其它的代码。比如当我写model非常烦的时候，就可以转而去写写control了，至少这样心情会更为愉悦。写傻逼代码终归是让人感到非常枯燥的。第三个教训就是维护一套代码框架还是非常重要的：这似乎是所有强者的共同点了。
+
+不过说到底这些都是次要的。上周我最大的感想其实是现代社会真的只是换了种方式来对人进行剥削，而剥削从未停止，是故我们终将被异化。原始社会的剥削方式是采用惩罚的形式，不为之干活则肉体折磨。资本主义的剥削是通过金钱的形式，或者说，通过金钱占据资源，你为了获得金钱于是不得不去干活。资本主义社会经营的学术圈嘛，则无非是另一个资源社会。在一个学术发展到达瓶颈的时刻，坑和名誉变成了和金钱类似的资源。博士生就是这样被剥削的。
+
+然而社会要往前发展（或者说由于资本主义社会是透支了未来的，为了维持平衡不得不向前发展），必须压榨社会中的人。市场和资本主义自然就形成了一种非常好的压榨机制。说句题外话，我其实不觉得这个机制就是效率真正高的表现，但是确实表现不错。没有占据资本的弱势一方，则需要永远承担被剥削的责任。这就和没有才能（但本质上是没有足够好的教育资源）的一方，就得承受永恒的剥削了。教育是一种剥削，以金钱名誉为饵，当资本主义社会发现低素质的劳动人口已经足够的时候，自然就要开始鼓吹教育，让人拼命互相竞争，从而来压榨出更多地发展潜力。
+
+这不是什么我现在能够解决的问题。只是生活在这样的年代里，真是一件令人悲伤的事情。
