PETS like cem and parallel envs

--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -7,6 +7,8 @@ So I have the following routines
 #Env:
 抄一个cartpole过来。
 
+然后用cross entropy method跑通。。
+
 # Model learning in toy examples
 理论上我应该可以直接copy quan的代码然后抄抄就好了。
 
