--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -18,3 +18,8 @@ So I have the following routines
 艹。。这三天就专心吃这坨屎了。
 
 目前计算机学术圈最坑的地方无非就是大家都非常熟悉怎么找个小point发paper这一套理论，于是就不追求能用的东西了。
+
+---
+
+调参方法：
+1. 把别人的网络抠过来然后塞到自己的网络里测测。
