--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -24,3 +24,11 @@ So I have the following routines
 调参方法：
 1. 把别人的网络抠过来然后塞到自己的网络里测测。
 
+---
+
+20:59 感觉应该没有太大bug
+接下来：
+1. 得把training和环境reward测试的统一到一个tensorboard里，想想这个tensorboard什么时候同步的说。
+2. 似乎可以加polin了，应该花不了多少时间。
+3. 把其它环境给抠出来。。。
+
