--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -32,3 +32,20 @@ So I have the following routines
 2. 似乎可以加polin了，应该花不了多少时间。
 3. 把其它环境给抠出来。。。
 
+---
+
+POPLIN-A-Init:
+Neural network policy to propose init
+
+POPLIN-A-Replan:
+相当于fix每步的variance的MCTS（vairance就是sample的noise，这个是显然不对的）
+
+POPLIN:
+    CEM update policy network
+        -UNI: 每步noise一样
+        -SEP: 每步noise不一样
+    究竟是不是用多元高斯来拟合其实是个问题。
+    
+Experiments:
+    1. Poplin p is the best.
+    2. POPLIN-P-Sep is much better than POPLIN-P-Uni
