--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -49,3 +49,12 @@ POPLIN:
 Experiments:
     1. Poplin p is the best.
     2. POPLIN-P-Sep is much better than POPLIN-P-Uni
+    
+---
+我需要实现的：
+1. collect real data for estimate mean and variance
+2. collect imaginary data:
+    1. start state?
+    2. weight?
+    3. returns?
+    4. sol?
