--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -25,6 +25,12 @@ So I have the following routines
 1. 把别人的网络抠过来然后塞到自己的网络里测测。
 
 ---
+1-4 晚
+感觉可能有NAN的问题导致程序挂掉，确实不知道topk对于nan 是怎么处理的。
+
+CEM 似乎还有神奇的变形：返回best sol而不是当前sol，不过这个没人用来着。
+
+---
 
 20:59 感觉应该没有太大bug
 接下来：
