some strange things about poplin

--- a/workspace/worklog/1-2.md
+++ b/workspace/worklog/1-2.md
@@ -1,5 +1,14 @@
 # Pytorch Implementation of several model-based RL method
 
+# 总结
+写于1-05 16:40
+
+这三天的进展：确确实实实现了Poplin和PETS，但是两者都没能够成功复现之前的文章。之前的文章里太混乱了，关于swimmer的分数就有一万种说法。
+
+---
+
+
+
 Vuong Quan has its a reproducing code which I could use.
 
 So I have the following routines
