--- a/workspace/worklog/1-6.md
+++ b/workspace/worklog/1-6.md
@@ -2,10 +2,14 @@
 
 1. DM control suite 
 
-- CartPole
+- CartPole:
+    How to do it?
 - Ant
 - Swimmer - different length
-- Cheetah
+    Can combine with multi world.
+- Cheetah:
+    done, but I should think about the observation and priors...
+    but I don't know what's the usage of root joint...
 - Reacher
 - Pusher
 
