--- a/workspace/1-6.md
+++ b/workspace/1-6.md
@@ -2,8 +2,7 @@
 
 1. DM control suite 
 
-- CartPole:
-    How to do it?
+- CartPole: Finished
 - Ant
 - Swimmer - different length
     Can combine with multi world.
