--- a/workspace/1-6.md
+++ b/workspace/1-6.md
@@ -3,27 +3,30 @@
 1. DM control suite 
 
 - CartPole: Finished
-- Ant
+- Ant: global pose 还是有问题
 - Swimmer - different length
     Can combine with multi world.
 - Cheetah:
     done, but I should think about the observation and priors...
     but I don't know what's the usage of root joint...
+- Humanoid
 - Reacher
 - Pusher
 
 - Baseline?
-    1. SAC
-    2. PPO
-    3. TD3?
-    4. Model-based
+    1. SAC: with code, but I don't know if the code work.
+    2. PPO: pass
+    3. TD3: with the official code.
+    4. Model-based: with my own code.., I have to check if it work and I have to wrap it into a funciton.
 
 2. Forward model benchmark
 
 - Forward model support
+
 - Visualization
 
 
 3. Meta-world
 
+- Swimmer of different length.
 - Pusher with different type of objects
