--- a/workspace/1-18.md
+++ b/workspace/1-18.md
@@ -41,7 +41,14 @@ As for a space:
 ## TODOs
 应该处于也将长期处于复现工作中。
 
-chutong估计搞不定POLO，之后得花一周的时间去做做。
+下一周的任务，理清其baseline，然后把手下的task全部接手。
+学会submodule。
+
+1. chutong估计搞不定POLO，之后得花一周的时间去做做。
+2. jinyu，我应给其提供task支持
+3. yingren，我应该给其提供复现支持 （由于这是个测试，所以让他先玩玩
+4. yiran，推箱子，和代码支持
+5. Zhizuo 是否应该继续
 
 一周之内出mujoco上的实验？
 这三天主要做Model方面，GNN的baseline，方便跟jinyu zhao对接。
@@ -50,3 +57,4 @@ chutong估计搞不定POLO，之后得花一周的时间去做做。
 Language as an Abstraction for Hierarchical Deep Reinforcement Learning/和Program Guided Agent这个，交给yingren去踩坑。
 
 Yiran，推箱子不知道如何了，似乎可以先用这个试试？
+
