--- a/workspace/1-18.md
+++ b/workspace/1-18.md
@@ -1,17 +1,42 @@
-Define a new class that involves in the computation is always not a good idea as it will make the concept more complex... the same as before, we just extend the previous idea:
-1. allow the environment to add a scene variable.
-2. frame_space, 将数据转化成为either dict of tensor/numpy or dict, numpy。sub, metric用来描述两个state之间的差，如何修改，以及metric。
-3. observation_space/frame_space.observation_space，描述state_space.observe(state)的结果。
-4. derivative_space/frame_space.derivative_space，描述state_space.sub(state1, state2)的结果
-5. frame_space(xx, scene) will return a psudo variable, calling the method to frame_space(xxx) will return  
+最终还是只能宣告失败：
+1. 过多的抽象带来的永远都是麻烦，还是只有纯粹的函数形式才方便
+2. Dict是邪恶的，永远不要使用继承自dict的类（原因是因为我不想自己再维护一套复杂的语言
+3. 如果一样事物设计起来比较复杂，那么就不要去设计，直到这个东西真正地被改变。
+4. 用一个config类型存下必要的信息还是很有用的。
+
+现在的问题在于：
+我们需要对observation和action进行预处理。
+然后再学基于这个的observation space。
+
+还是按照之前一样，这个就叫做extension吧。
+1. 一个encode_obs函数将state转化成网络的输出
+    以及对应的inp_dim
+2. 一个update函数来根据differences来对state进行update
+    以及对应的difference dim
+3. 一个distance函数
+
+额外加入一个scene_space即可。
 
 
-The frame has the following usage:
-1. rollout: the rollout function will need to store the state and a sequence of variable/actions.
-2. sample two consequent frame from the replay buffer.
-3. from the frame get the input to the neural network.. with predefined observation space.
-4. calculate the update rule between from one frame to another...
-5. metric over two frames...
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
