--- a/workspace/1-27.md
+++ b/workspace/1-27.md
@@ -41,5 +41,9 @@
 ## Mujoco Environments
 In this task, we should 1. run the environment on the ssh and render it to image. 2. run ppo/sac/TD3 and figure out the correct api on the server...
 
-1. We first need add a timewrapper..
-
+on 1-29 15:28
+1. Algorithm side: we have the TD3 algorithm.
+2. Environment:
+    - cartpole, roughly duplicate
+    - halfcheetah, seems to be slower
+    - swimmer, no viscosity
