adding swimmer viscosity..

--- a/workspace/1-27.md
+++ b/workspace/1-27.md
@@ -46,4 +46,12 @@ on 1-29 15:28
 2. Environment:
     - cartpole, roughly duplicate
     - halfcheetah, seems to be slower
-    - swimmer, no viscosity
+    - swimmer, no viscosity, so the model is totally different.
+    - ant?
+ 
+We now need the following things:
+1. correct pusher
+2. swimmer add viscosity by python
+    - hydraulic diameter
+3. sac and ppo
+4. add them to nautiles by one line of code..
