change behaviour of swimmer

--- a/workspace/1-27.md
+++ b/workspace/1-27.md
@@ -55,3 +55,4 @@ We now need the following things:
     - hydraulic diameter
 3. sac and ppo
 4. add them to nautiles by one line of code..
+5. her for myReach
